# ESP32Watch

./: README.md  platformio.ini
lib/: lv_conf.h
lib/GifCode/: GifCode.c  GifCode.h
lib/TFT_eSPI/: User_Setup.h
lib/lv_lib_gif/: lv_gif.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp_hook.c
lib/ui/src/fonts/: ui_font_NanumGothic.c
lib/ui/src/images/: ui_img_i01d_t_png.c  ui_img_i01n_t_png.c  ui_img_i02d_t_png.c  ui_img_i02n_t_png.c  ui_img_i03d_t_png.c  ui_img_i03n_t_png.c  ui_img_i04d_t_png.c  ui_img_i04n_t_png.c  ui_img_i09d_t_png.c  ui_img_i09n_t_png.c  ui_img_i10d_t_png.c  ui_img_i10n_t_png.c  ui_img_i11d_t_png.c  ui_img_i11n_t_png.c  ui_img_i13d_t_png.c  ui_img_i13n_t_png.c  ui_img_i50d_t_png.c  ui_img_i50n_t_png.c  ui_img_qr_png.c
lib/ui/src/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen7.c  ui_Screen8.c
src/: main.cpp
